--- a/style.css
+++ b/style.css
@@ -116,3 +116,30 @@ li {
 .card p {
     color: #1F2937;
 }
+
+/* section three */
+
+.section-three-container {
+    background-color: #E5E7EB ;
+}
+
+.section-three {
+    margin: 0 200px;
+    padding: 80px 0;
+}
+
+.quote {
+    font-size: 36px;
+    color: #1F2937;
+}
+
+.speaker {
+    font-size: 20px;
+    font-weight: 800;
+    text-align: right;
+    color: #1F2937;
+}
+
+.quotes-container {
+    margin: 0 100px;
+}
